src/style.css
/* ... */
#bottom-left-about-image{
  display: flex;
  position: absolute;
  left: 0px;
  top: 450px;
  justify-content: left;
}
#bottom-right-about-image{
  display: flex;
  position: absolute;
  justify-content: right;
  right: 0px;
  top: 470px;
}

#about-description{
  display: flex;
  text-align: center;
  height: auto;
  padding: 10px;
  max-width: 40%;
  font-size: 25px;
  font-weight: 500;
}

/*Officer Page tags*/
#officer-header{
  font-size: 90px;
}



#president-image{
}

/*I needed to make these since some of the descriptions written are longer than others.*/
#president-description{
  width: 70%;
  font-weight: 300px;5
}

#secretary-description{
  width: 90%;
}

#chaplain-description{
  width: 70%;
}
#social-media-manager-description{
  width: 70%;
}

#number1{
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
}

#number5{
  border-bottom-left-radius: 20px;
  border-bottom-right-radius: 20px;
}

/*Labels for the officers page: this is to enbale auto page scrolling/hopping*/
#president-label{
}

#vp-label{
}

#secretary-label{
}

#chaplain-label{
}

#social-media-manager-label{
}


/*Event page id's------------------------------------------*/
#events-label{
  font-size: 90px;
}

#next-event-banner{
  position: absolute;
  top: 25%;
}

#next-event-button{
  position: absolute;
  top: 35%;
}

#recap-image{
  max-width: 40%;
}

#event-list{
 display: flex;
 flex-direction:column;
 padding: 0px;
}

#event-list :hover{
  animation-name: enlarge-button;
  animation-direction:normal;
  animation-duration: 0.5s;
  font-size: 40px;
  color: rgb(0, 255, 0);
  cursor: pointer;
}



/*Event Graphics*/
#kickOffGraphic{
  max-width: 520px;
}




/*Media Queries (for different website sizes)*/
@media (max-width: 1600px){
  /*Home page adjustments*/
  #nextEventHeader{
    font-size: 60px;
  }

  #newsDiv{
    top: 370px;
  }
  #quoteDiv{
    top: 370px;
  }
 #newsDescription{
  width: 279px;
 }
 #newsImg{
  width: 303px;
 }


 /*Officer page adjustments*/
 .officer-label{
  font-size: 28px;
 }
 .officer-description{
  font-size:14px;
 }

 #president-description{
  width: 50%;
 }
 
}

